--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "backend",
   "version": "1.0.50",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "bun run src/server.ts",
     "dev": "bun run --watch src/server.ts"
   },
   "dependencies": {
     "@elysiajs/cookie": "^0.8.0",
-    "elysia": "latest"
+    "@elysiajs/cors": "^1.4.0",
+    "@elysiajs/static": "^1.4.4",
+    "@types/mssql": "^9.1.8",
+    "elysia": "latest",
+    "elysiajs-helmet": "^1.0.2",
+    "eta": "^4.0.1",
+    "mssql": "^12.0.0"
   },
   "devDependencies": {
+    "@types/bun": "^1.3.1",
     "bun-types": "latest"
   },
   "module": "src/index.js"
