--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --watch src/server.ts"
   },
   "dependencies": {
+    "@bogeychan/elysia-logger": "^0.1.10",
     "@elysiajs/cookie": "^0.8.0",
     "@elysiajs/cors": "^1.4.0",
     "@elysiajs/static": "^1.4.4",
@@ -13,7 +14,9 @@
     "elysia": "latest",
     "elysiajs-helmet": "^1.0.2",
     "eta": "^4.0.1",
-    "mssql": "^12.0.0"
+    "mssql": "^12.0.0",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2"
   },
   "devDependencies": {
     "@types/bun": "^1.3.1",
