--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
-# Server Configuration
+# Configuración del servidor
 HOST=localhost
 PORT=3006
 NODE_ENV=development
 
-# Database Configuration
+# Logging Configuration
+ENABLE_LOGS=true
+
+# Configuración de la base de datos
 DB_USER=your_db_user
 DB_PASSWORD=your_db_password
 DB_SERVER=localhost
@@ -13,7 +16,7 @@ DB_PORT=1433
 DB_ENCRYPT=false
 DB_TRUST_SERVER_CERTIFICATE=false
 
-# JWT Configuration
+# Configuración JWT
 JWT_SECRET=your_jwt_secret
 JWT_REFRESH_SECRET=your_jwt_refresh_secret
 JWT_EXPIRATION_TIME=6h
@@ -21,5 +24,5 @@ JWT_REFRESH_EXPIRATION_TIME=7d
 JWT_EXPIRATION_TIME_MS=21600000
 JWT_REFRESH_EXPIRATION_TIME_MS=604800000
 
-# CORS Configuration
+# Configuración CORS
 CORS_ORIGINS=http://localhost:3206,http://localhost:3009
