--- a/package.json
+++ b/package.json
@@ -2,21 +2,18 @@
   "name": "backend",
   "version": "1.0.50",
   "scripts": {
-    "start": "bun run src/server.ts",
-    "dev": "bun run --watch src/server.ts"
+    "start": "bun src/server.ts",
+    "dev": "bun --watch src/server.ts",
+    "prod": "NODE_ENV=production bun src/server.ts",
+    "logs:errors": "cat logs/errors.log 2>/dev/null || echo 'No hay errores registrados'",
+    "logs:warnings": "cat logs/warnings.log 2>/dev/null || echo 'No hay warnings registrados'",
+    "logs:clear": "rm -rf logs/*.log && echo 'Logs eliminados'"
   },
   "dependencies": {
-    "@bogeychan/elysia-logger": "^0.1.10",
-    "@elysiajs/cookie": "^0.8.0",
-    "@elysiajs/cors": "^1.4.0",
-    "@elysiajs/static": "^1.4.4",
     "@types/mssql": "^9.1.8",
     "elysia": "latest",
-    "elysiajs-helmet": "^1.0.2",
     "eta": "^4.0.1",
-    "mssql": "^12.0.0",
-    "pino": "^10.1.0",
-    "pino-pretty": "^13.1.2"
+    "mssql": "^12.0.0"
   },
   "devDependencies": {
     "@types/bun": "^1.3.1",
